--- a/slides/slides.rmd
+++ b/slides/slides.rmd
@@ -38,7 +38,8 @@ xaringanExtra::use_panelset()
 ```
 
 # **APIs**: you're probably not using them and why you probably should
-### Presented by: **Katie Masiello**
+### Presented by: **Katie Masiello** | Developed by: **Josiah Parry**
+### **RStudio Customer Success**
 
 ---
 class: middle, center
