updated following plumber 1.1.0 release

--- a/index.Rmd
+++ b/index.Rmd
@@ -12,12 +12,16 @@ xaringanExtra::embed_xaringan(url = "slides/slides.html", ratio = "4:3")
 
 Additional Resources:
 
+* Plumber cheatsheet: https://rstudio.com/resources/cheatsheets 
+
 * See the `plumber` package website: https://www.rplumber.io/. You’ll find installation instructions along with related projects and contextual information
 
 * Watch our webinar covering the latest in the Plumber package: https://rstudio.com/resources/webinars/expanding-r-horizons-integrating-r-with-plumber-apis/
 
 * At our annual conference rstudio::conf 2020, Alex Gold (Solutions Engineer at RStudio) presented some additional ways to bring your R work into production using Plumber: https://rstudio.com/resources/rstudioconf-2020/deploying-end-to-end-data-science-with-shiny-plumber-and-pins/
 
-* Another excellent conference talk is James Blair's rstudio::conf 2019 talk "Democratizing R with Plumber APIS" where he takes an existing Shiny application that uses an R model and turns the model into an API so it can be used by other applications: https://rstudio.com/resources/rstudioconf-2019/democratizing-r-with-plumber-apis/  
+* Another excellent conference talk is James Blair's rstudio::conf 2019 talk "Democratizing R with Plumber APIs" where he takes an existing Shiny application that uses an R model and turns the model into an API so it can be used by other applications: https://rstudio.com/resources/rstudioconf-2019/democratizing-r-with-plumber-apis/  
+
+* See Barrett Schloerke's talk "plumber + future: Async Web APIs" from  rstudio::global 2021 for asynchronous calls to APIs: https://www.rstudio.com/resources/rstudioglobal-2021/plumber-and-future-async-web-apis/
 
 * If you’re interested in how Plumber specifically works with RStudio Connect you can find documentation here: https://docs.rstudio.com/how-to-guides/rsc/publish-plumberapi/
